--- a/blogs.html
+++ b/blogs.html
@@ -50,11 +50,11 @@
                 <div class="collapse navbar-collapse pt-2" id="main-navbar">
                     <ul class="navbar-nav mr-auto w-100 justify-content-center">
                         <li class="nav-item dropdown">
-                            <a class="nav-link " href="index.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link " href="index.html" data-bs-toggle="dropdown">
                                Properties
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
-                                <a class="dropdown-item" href="index.html">Homepage</a>
+                            <div class="dropdown-menu" >
+                                <a class="dropdown-item" href="Homepage-option-2.html">Homepage-option-2</a>
                                 <a class="dropdown-item" href="properties.html">Properties</a>
                                 <a class="dropdown-item" href="properties-1.html">Properties-1</a>
                                 <a class="dropdown-item" href="properties-2.html">Properties-2</a>
@@ -62,21 +62,20 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="Financing_ ortgage Calculator.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link" href="Financing_ ortgage Calculator.html" data-bs-toggle="dropdown">
                              Financing <i class="fa-solid fa-caret-down ml-1"></i>
                              </a>
-                             <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
+                             <div class="dropdown-menu" >
                                 <a class="dropdown-item" href="Financing eligibility Calculator.html">Financing Eligibility Calculator</a>
                                 <a class="dropdown-item" href="Financing_ ortgage Calculator-1.html">financing-ortgage calculator-1</a>
                                 <a class="dropdown-item" href="Financing_ ortgage Calculator.html">financing-ortgage calculator</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" target="_self" href="aboutus.html" data-toggle="dropdown" id="dropdown-menu" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link" href="aboutus.html" data-bs-toggle="dropdown">
                               About Us
                              </a>
-                             <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
-                                <a class="dropdown-item" href="aboutus.html">About Us</a>
+                             <div class="dropdown-menu" >
                                 <a class="dropdown-item" href="blogs.html">Blogs</a>
                                 <a class="dropdown-item" href="contact-us.html">Contact Us</a>
                                 <a class="dropdown-item" href="privacy.html">Privacy Policy</a>
@@ -85,19 +84,17 @@
                         </li>
                     
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="career.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link" href="career.html" data-bs-toggle="dropdown">
                              Careers
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
-                             <a class="dropdown-item" href="career.html">Careers</a>
+                            <div class="dropdown-menu">
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a   class="nav-link dropdown-toggle" href="partner.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a   class="nav-link" href="partner.html" data-bs-toggle="dropdown">
                              Partners
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown-menu" >
-                                <a class="dropdown-item" href="partner.html">Partners</a>
+                            <div class="dropdown-menu">
                                </div>
                         </li>
                     </ul>
@@ -112,6 +109,7 @@
                      Properties
                     </a>
                     <ul class="dropdown">
+                        <a class="" href="Homepage-option-2.html">Homepage-option-2</a>
                         <a class="" href="properties.html">Properties</a>
                         <a class="" href="properties-1.html">Properties-1</a>
                         <a class="" href="properties-2.html">Properties-2</a>
@@ -158,7 +156,6 @@
             </ul>
         </nav>
     </header>
-
 
      <div class=" section-padding">
         <div class="container">
